--- a/src/App.scss
+++ b/src/App.scss
@@ -41,4 +41,13 @@ body {
       }
     }
   }
+
+  .pageUseToggle {
+		.positive {
+			color: greenyellow;
+		}
+		.negative {
+			color: red;
+		}
+	}
 }
